--- a/webapp-template-server/package.json
+++ b/webapp-template-server/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "migrate": "ts-node -r tsconfig-paths/register scripts/migrate.ts",
     "migrate:force": "ts-node -r tsconfig-paths/register scripts/migrate.ts --force",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
