--- a/webapp-template-server/package.json
+++ b/webapp-template-server/package.json
@@ -52,7 +52,8 @@
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "mongoose": "^9.1.5",
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -72,7 +73,6 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
-    "mongoose": "^9.1.5",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
