--- a/webapp-template-admin/package.json
+++ b/webapp-template-admin/package.json
@@ -13,6 +13,9 @@
     "@ant-design/icons": "^6.1.0",
     "antd": "^6.2.2",
     "axios": "^1.13.4",
+    "dayjs": "^1.11.19",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "mitt": "^3.0.1",
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
