--- a/webapp-template-server/package.json
+++ b/webapp-template-server/package.json
@@ -49,6 +49,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^9.1.5",
     "nanoid": "^5.1.6",
+    "nodemailer": "^8.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
@@ -67,6 +68,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.9",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
