--- a/server/package.json
+++ b/server/package.json
@@ -54,7 +54,8 @@
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "@webapp-template/common": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
