--- a/admin/package.json
+++ b/admin/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@webapp-template/common": "workspace:*",
     "antd": "^6.2.2",
     "axios": "^1.13.4",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.19",
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.6",
@@ -23,8 +25,7 @@
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
     "ufo": "^1.6.3",
-    "zustand": "^5.0.10",
-    "@webapp-template/common": "workspace:*"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
